--- a/.gitignore
+++ b/.gitignore
@@ -149,4 +149,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
-
+local.properties
