--- a/renovate.json5
+++ b/renovate.json5
@@ -11,9 +11,9 @@
         {
             // Grouping Kotlin, KSP and Compose Compiler
             "matchPackagePrefixes": [
-                "org.jetbrains.kotlin:",
-                "com.google.devtools.ksp:",
-                "androidx.compose.compiler:",
+                "org.jetbrains.kotlin",
+                "com.google.devtools.ksp",
+                "androidx.compose.compiler",
             ],
             "groupName": "Kotlin, KSP and Compose Compiler",
         },
