--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,3 +17,4 @@ kotlin-test = ["kotlin-test-common", "kotlin-test-annotations-common"]
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
