--- a/renovate.json5
+++ b/renovate.json5
@@ -7,17 +7,15 @@
     "labels": [
         "dependencies",
     ],
-//     "packageRules": [
-//         {
-//             // Grouping Kotlin, KSP and Compose Compiler
-//             "matchPackagePrefixes": [
-//                 "org.jetbrains.kotlin:",
-//                 "androidx.compose.compiler:",
-//             ],
-//             "matchPackagePatterns": [
-//                 "^com.google.devtools.ksp",
-//             ],
-//             "groupName": "Kotlin, KSP and Compose Compiler",
-//         },
-//     ],
+    "packageRules": [
+        {
+            // Grouping Kotlin, KSP and Compose Compiler
+            "matchPackagePrefixes": [
+                "org.jetbrains.kotlin:",
+                "com.google.devtools.ksp:",
+                "androidx.compose.compiler:",
+            ],
+            "groupName": "Kotlin, KSP and Compose Compiler",
+        },
+    ],
 }
